--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -60,11 +60,87 @@ h2{
   width: 100%;
 }
 
+
 .nodelabel{
   text-anchor: middle;
   text-align: center;
+  font-size:12px;
 }
 
 .nodelabel:hover{
   cursor: default;
 }
+
+div.tooltip {
+  position: absolute;
+  text-align: center;
+  width: 200px;
+  height: 40px;
+  padding: 2px;
+  font: 18px sans-serif;
+  background: #343a40;
+  color : white ;
+  border: 0px;
+  border-radius: 8px;
+  pointer-events: none;
+}
+
+.yaxis line{
+  stroke: #ccc;
+}
+
+
+
+.axis text{
+  fill: #ccc;
+}
+
+.area {
+  opacity: 1;
+}
+.area:hover {
+  opacity: 0.7;
+}
+
+.slides{
+  object-fit: cover;
+  border-radius: 50%;
+
+}
+
+
+.slide-text{
+  color: white;
+  font-size: 50px;
+  padding-left: 10%;
+}
+
+.quote{
+  color: white;
+  font-size: 70px;
+  text-align: center;
+}
+
+.divide {
+  position: relative;
+  text-align: center;
+  color: white;
+  height: 600px;
+  overflow: hidden;
+
+}
+
+.divide img{
+  object-fit: cover;
+  opacity:0.5;
+  width:100%;
+}
+
+.centered {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+
