--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -168,3 +168,23 @@ div.tooltip {
   padding-left:5%;
   padding-bottom: 5%;
 }
+
+
+
+.o-footer__landscape {
+  width: 100%;
+  height: auto;
+}
+
+div.tooltip {
+  position: absolute;
+  text-align: center;
+  width: 60px;
+  height: 28px;
+  padding: 2px;
+  font: 12px sans-serif;
+  background: #7a41ff;
+  border: 0px;
+  border-radius: 8px;
+  pointer-events: none;
+}
