--- a/css/scrolling-nav.css
+++ b/css/scrolling-nav.css
@@ -31,6 +31,12 @@ h3{
   padding-left:15%;
 }
 
+p{
+  color: white;
+  font-size: 20px;
+  padding-left: 10%;
+}
+
 .main-header{
   background-color: #7a41ff;
 }
@@ -41,7 +47,7 @@ h3{
   text-align: center;
 }
 
-.text-body p{
+#total{
   font-size: 200px;
   line-height: 200px;
   height: 50px;
